// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article layout can be used when [FRAGILE] assigns classes 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe fRlYRf article-layout my-class"
  >
    <div>
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Article layout can be used when allows to render thumbnail 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe fRlYRf article-layout"
  >
    <img
      alt="Thumbnail"
      src="https://localhost:3000/img/image.png"
    />
    <div>
      Content
    </div>
  </div>
</DocumentFragment>
`;
